# doppelganger-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
doppelganger/: __init__.py  __main__.py  analyzer.py  bot.py  config.py  generator.py  personality.py  storage.py
doppelganger/ai/: __init__.py  engine.py  prompts.py
doppelganger/handlers/: __init__.py  commands.py  messages.py
doppelganger/profiles/: __init__.py  manager.py  models.py
doppelganger/scheduler/: __init__.py  background.py
doppelganger/storage/: __init__.py  tracker.py
src/: SSL_verification_bypass_on_redirect_26.py  Unicode_handling_in_scan_output_31.py  add_Telegram_notification_integration_12.py  add_Telegram_notification_integration_25.py  add_WebSocket_health_check_endpoint_11.py  consolidate_duplicate_regex_patterns_21.py  crash_on_empty_lockfile_input_16.py  extract_configuration_validation_logic_3.py  extract_scanner_engine_into_separate_cla_9.py  implement_CVE_matching_engine_10.py  implement_rate_limiting_middleware_0.py  implement_result_deduplication_logic_7.py  implement_subdomain_enumeration_module_4.py  incorrect_CVE_severity_score_mapping_22.py  incorrect_exit_code_on_scan_failure_5.py  infinite_loop_on_malformed_YAML_input_27.py  lazy-load_optional_dependencies_14.py  lazy-load_optional_dependencies_20.py  memory_leak_in_long-running_scan_session_13.py  merge_result_formatters_into_single_modu_32.py  merge_result_formatters_into_single_modu_8.py  off-by-one_error_in_port_range_parsing_2.py  race_condition_in_async_result_collector_19.py  reduce_memory_for_large_scan_results_1.py  thread_pool_exhaustion_under_high_load_24.py  unify_error_handling_across_modules_28.py  unify_error_handling_across_modules_30.py
src/analyzer/: __init__.py
src/config/: __init__.py
src/parser/: constants.py
src/tests/: utils.py
tests/: __init__.py  test_add_edge_case_coverage_for_parser_15.py  test_add_edge_case_coverage_for_parser_6.py  test_api.py  test_engine.py  test_profiles.py  test_tracker.py
