[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doppelganger-bot"
version = "1.0.0"
description = "AI-powered Telegram bot that learns personality patterns from group chats and can impersonate anyone"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Lappy000", email = "not.furry10@gmail.com"},
]
keywords = ["telegram", "bot", "ai", "personality", "nlp", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-telegram-bot>=20.7",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Lappy000/doppelganger-bot"
Repository = "https://github.com/Lappy000/doppelganger-bot"
Issues = "https://github.com/Lappy000/doppelganger-bot/issues"

[project.scripts]
doppelganger = "doppelganger.bot:main"

[tool.setuptools.packages.find]
include = ["doppelganger*"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 110

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
